숫자야구 진행중, vue-loader 버전 수정

--- a/2.Wordrelay/Wordrelay.html
+++ b/2.Wordrelay/Wordrelay.html
@@ -16,7 +16,7 @@
     </div>
 
     <script>
-      Vue.component("word-relay", {
+      Vue.component("wordRelay", {
         template: `
         <div>
             <div>{{word}}</div>
